--- a/src/styles/CoursePage.module.css
+++ b/src/styles/CoursePage.module.css
@@ -53,7 +53,7 @@
 
 }
 
-@media screen and (min-height:350px) {
+/* @media screen and (min-height:350px) {
 
 
 
@@ -64,7 +64,7 @@
     }
 
 
-}
+} */
 
 @media screen and (min-height:651px) {
 
