--- a/components/Start/PaymentMothod.module.css
+++ b/components/Start/PaymentMothod.module.css
@@ -6,6 +6,12 @@
 
 }
 
+.shadowbtnContinue {
+
+    box-shadow: 0px 17.9427px 25.1198px rgba(0, 0, 0, 0.11);
+    background: #FFFFFF;
+}
+
 @keyframes hidebgelement {
 
     0% {
