--- a/components/Start/Start.module.css
+++ b/components/Start/Start.module.css
@@ -172,7 +172,7 @@
     }
 }
 
-@media (max-height:812px) {
+@media (max-height:812px) and (min-width:992px) {
     .creditCardImage {
         width: 260px !important;
         height: 140px !important;
@@ -213,7 +213,7 @@
 
 }
 
-@media (max-height:992px) {
+@media (max-height:992px) and (min-width:992px) {
     .creditCardImage {
         width: 169px !important;
         height: 100px !important;
@@ -249,7 +249,7 @@
 
 }
 
-@media (max-height:750px) {
+@media (max-height:750px) and (min-width:992px) {
 
     .redeemCardImage {
         width: 120px !important;
@@ -370,7 +370,7 @@
 
 }
 
-@media (max-height:650px) {
+@media (max-height:650px) and (min-width:992px) {
 
     .redeemCardImage {
         width: 100px !important;
@@ -496,7 +496,7 @@
 
 }
 
-@media (max-height:550px) {
+@media (max-height:550px) and (min-width:992px) {
 
     .splitPaymentMethod {
         width: 130px !important;
@@ -577,7 +577,7 @@
     }
 }
 
-@media (max-height:450px) {
+@media (max-height:450px) and (min-width:992px) {
 
     .redeemCardImage {
         width: 80px !important;
@@ -739,7 +739,7 @@
     }
 }
 
-@media (max-width:1280px) {
+@media (max-width:1280px) and (min-width:992px) {
 
     .paymentDialog {
         max-width: 750px !important;
@@ -748,7 +748,7 @@
 
 }
 
-@media (min-width:1280px) {
+@media (min-width:1280px) and (min-width:992px) {
 
     .authorImage {
 
@@ -757,7 +757,7 @@
     }
 }
 
-@media (min-width:992px) {
+@media (min-width:992px) and (min-width:992px) {
 
     .authorImage {
 
