--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1246,8 +1246,8 @@ ol {
   }
 
   .fourxllargef {
-    font-size: 15px !important;
-    line-height: 22px !important;
+    font-size: 26px !important;
+    line-height: 100% !important;
   }
 
   .superlargef {
@@ -1327,7 +1327,9 @@ ol {
 
   .fourxllargef {
     font-size: 16px;
-    line-height: 19px;
+    /* line-height: 19px; */
+    line-height: 100% !important;
+
   }
 
   .fivexllargef {
@@ -1415,7 +1417,10 @@ ol {
 
   .fourxllargef {
     font-size: 22px !important;
-    line-height: 32px !important;
+    /* line-height: 32px !important; */
+    line-height: 100% !important;
+
+
   }
 
   .fivexllargef {
@@ -1497,8 +1502,10 @@ ol {
   }
 
   .fourxllargef {
-    font-size: 25px !important;
-    line-height: 28px !important;
+    font-size: 22px !important;
+    /* line-height: 28px !important; */
+    line-height: 100% !important;
+
   }
 
   .fivexllargef {
@@ -1584,7 +1591,9 @@ ol {
 
   .fourxllargef {
     font-size: 18px !important;
-    line-height: 18px !important;
+    /* line-height: 18px !important; */
+    line-height: 100% !important;
+
   }
 
   .fivexllargef {
@@ -1663,7 +1672,9 @@ ol {
 
   .fourxllargef {
     font-size: 15px !important;
-    line-height: 17px !important;
+    /* line-height: 17px !important; */
+    line-height: 100% !important;
+
   }
 
   .superlargef {
@@ -1744,7 +1755,9 @@ ol {
 
   .fourxllargef {
     font-size: 15px !important;
-    line-height: 17px !important;
+    /* line-height: 17px !important; */
+    line-height: 100% !important;
+
   }
 
   .superlargef {
@@ -1821,7 +1834,9 @@ ol {
 
   .fourxllargef {
     font-size: 40px !important;
-    line-height: 45px !important;
+    /* line-height: 45px !important; */
+    line-height: 100% !important;
+
   }
 
   .superlargef {
@@ -3506,7 +3521,9 @@ ol {
 
   .fourxllargef {
     font-size: 40px;
-    line-height: 60px;
+    /* line-height: 60px; */
+    line-height: 100% !important;
+
   }
 
   .supermediumf {
