--- a/src/styles/CoursePage.module.css
+++ b/src/styles/CoursePage.module.css
@@ -31,6 +31,19 @@
 
 }
 
+/* line clamp  */
+
+.lineClampContent {
+
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    max-height: 150px;
+    overflow: hidden;
+    padding-right: 2px;
+
+}
+
 
 /* balence counter  */
 
