--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,8 +8,6 @@ a {
   text-decoration: none;
 }
 
-
-
 body {
   padding: 0;
   margin: 0;
@@ -18,14 +16,10 @@ body {
 }
 
 /* font-family: -apple-system-body BlinkMacSystemFont, Segoe UI, Roboto, Barlow Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
-
-
-
 textarea {
 
   background-color: #FFFFFF !important;
 }
-
 
 .Boxshadow {
   box-shadow: 0px 4px 52px 4px rgba(10, 6, 22, 0.08);
@@ -1082,7 +1076,7 @@ input {
 
 /* minheight screen size font  */
 
-@media (max-height:840px) and (min-width:992px) {
+/* @media (max-height:840px) and (min-width:992px) {
 
   .extxlsmallf {
     font-size: 12px !important;
@@ -1116,8 +1110,8 @@ input {
   }
 
   .dubblelargef {
-    font-size: 30px !important;
-    line-height: 35px !important;
+    font-size: 20px !important;
+    line-height: 25px !important;
   }
 
   .dubblelargefXXL {
@@ -1158,7 +1152,7 @@ input {
   .nctbmbmtTop {
     margin-top: 20px !important;
   }
-}
+} */
 
 /* min-width-992 and max-height 840px */
 
@@ -1202,8 +1196,8 @@ input {
   }
 
   .dubblelargef {
-    font-size: 30px !important;
-    line-height: 35px !important;
+    font-size: 20px !important;
+    line-height: 25px !important;
   }
 
   .triplelargef {
@@ -3341,8 +3335,8 @@ input {
   }
 
   .dubblelargef {
-    font-size: 30px;
-    line-height: 40px;
+    font-size: 22px;
+    line-height: 30px;
   }
 
   .triplelargef {
@@ -3439,8 +3433,8 @@ input {
   }
 
   .dubblelargef {
-    font-size: 35px;
-    line-height: 45px;
+    font-size: 20px;
+    line-height: 27px;
   }
 
   .dubblelargefXL {
@@ -3565,8 +3559,8 @@ input {
   }
 
   .dubblelargef {
-    font-size: 36px;
-    line-height: 46px;
+    font-size: 23px;
+    line-height: 30px;
   }
 
   .dubblelargefXL {
@@ -3697,8 +3691,8 @@ input {
   }
 
   .dubblelargef {
-    font-size: 41px;
-    line-height: 45px;
+    font-size: 25px;
+    line-height: 35px;
     letter-spacing: -0.5px;
   }
 
